[Abhishek]Refactor:User login and Registration features

--- a/BookStore/BookStore/.env
+++ b/BookStore/BookStore/.env
@@ -3,7 +3,7 @@ APP_PORT = 6000
 
 API_VERSION = v1
 
-SECRET_KEY='ABHISHINDE'
-
-DATABASE = mongodb+srv://test:test@demo.aoloa.mongodb.net/AbhiBookStore?retryWrites=true&w=majority
+DATABASE = mongodb+srv://test:test@demo.aoloa.mongodb.net/BookStoreAbhi?retryWrites=true&w=majority
 DATABASE_TEST = mongodb+srv://test:test@demo.aoloa.mongodb.net/test?retryWrites=true&w=majority
+
+SECRET_KEY = 'ABHISHEKS';
